<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDeleteDoneFragment"
    android:layoutDirection="rtl"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="عنوان"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:id="@+id/edittext_edit_done_remove_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="جزییات"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:id="@+id/edittext_edit_done_remove_detail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="تاریخ"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:id="@+id/edittext_edit_done_remove_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:text="ساعت"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:id="@+id/edittext_edit_done_remove_hour"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_done"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_done_task"
                    android:drawableRight="@drawable/ic_done"/>

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_delete_task"
                    android:drawableRight="@drawable/ic_delete"/>

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_edit_task"
                    android:drawableRight="@drawable/ic_edit"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>